tester/testsuite/good/core022.yal
fn main() -> int {
let x: int;
let y: double;
    printInt(x);
    printDouble(y);
    return 0;
}
