tester/testsuite/bad/array06.yal
fn main() -> int {
let x: int;
  for(int i : x) {
let y: int = i;
  }
  return 0;
}
